fix: Cleanup MOP API and Enahnce Loading Time of Navigations - MEED-1777 - Meeds-io/meeds#660